--- a/src/wwwroot/package.json
+++ b/src/wwwroot/package.json
@@ -3,21 +3,14 @@
   "version": "0.0.1",
   "private": true,
   "dependencies": {
-    "@aspnet/signalr": "^1.1.2",
-    "@types/jest": "^24.0.5",
-    "@types/lodash.shuffle": "^4.2.5",
-    "@types/node": "^12.12.5",
-    "@types/react": "^16.8.3",
-    "@types/react-dom": "^16.8.2",
-    "@types/react-router-dom": "^5.1.2",
+    "@microsoft/signalr": "^5.0.9",
     "array.prototype.flat": "^1.2.1",
-    "event-target-shim": "^5.0.0",
+    "event-target-shim": "^6.0.2",
     "lodash.shuffle": "^4.2.0",
     "prop-types": "^15.6.2",
-    "react": "^16.6.0",
-    "react-dom": "^16.6.0",
-    "react-router-dom": "^5.1.2",
-    "typescript": "^3.3.3"
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-router-dom": "^5.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -35,9 +28,15 @@
     "not op_mini all"
   ],
   "devDependencies": {
-    "ejs": "^2.6.1",
-    "react-scripts": "3.2.0",
-    "tslint": "^5.14.0",
-    "tslint-react": "^4.1.0"
-  }
+    "@types/jest": "^27.0.1",
+    "@types/lodash.shuffle": "^4.2.5",
+    "@types/node": "^16.7.1",
+    "@types/react": "^17.0.19",
+    "@types/react-dom": "^17.0.9",
+    "@types/react-router-dom": "^5.1.2",
+    "ejs": "^3.1.6",
+    "react-scripts": "4.0.3",
+    "typescript": "^4.3.5"
+  },
+  "proxy": "http://localhost:5000"
 }
